--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/grey"
     android:orientation="vertical">
 
     <TextView
@@ -27,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:background="@drawable/background"
+
         android:orientation="horizontal"
         android:padding="10dp">
 
