midi is playable perfectly

--- a/app/src/main/res/layout/activity_practice.xml
+++ b/app/src/main/res/layout/activity_practice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -16,21 +16,21 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-
+        android:layout_alignParentTop="true"
         android:gravity="top"
         android:text="Hello"
-        android:textSize="125dp"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    <!--
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@drawable/background"
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:background="@drawable/background"
-
-        android:orientation="horizontal"
-        android:padding="10dp">
+            android:orientation="horizontal"
+            android:padding="10dp">-->
 
         <!--<Button-->
         <!--android:id="@+id/iv_left_arrow"-->
@@ -40,16 +40,16 @@
         <!--android:layout_marginEnd="15dp"-->
         <!--android:background="@drawable/left_arrow" />-->
 
-        <SeekBar
-            android:id="@+id/sb"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/piano_bar"
-            android:padding="0dp"
-            android:progressDrawable="@null"
-            android:thumb="@drawable/seekbar_thumb" />
+    <!--<SeekBar
+        android:id="@+id/sb"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:background="@drawable/piano_bar"
+        android:padding="0dp"
+        android:progressDrawable="@null"
+        android:thumb="@drawable/seekbar_thumb" />-->
 
         <!--<Button-->
         <!--android:id="@+id/iv_right_arrow"-->
@@ -64,12 +64,29 @@
         <!--android:layout_width="30dp"-->
         <!--android:layout_height="30dp"-->
         <!--android:background="@drawable/music" />-->
-    </LinearLayout>
+    <!--</LinearLayout>-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:gravity="bottom"
+        android:orientation="vertical">
 
+        <SeekBar
+            android:id="@+id/sb"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_alignTop="@id/pv"
+            android:layout_gravity="center"
+            android:background="@drawable/piano_bar"
+            android:padding="0dp"
+            android:progressDrawable="@null"
+            android:thumb="@drawable/seekbar_thumb" />
     <com.techiespace.projects.chordswift.pianoHelpers.PianoView
         android:id="@+id/pv"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
     </com.techiespace.projects.chordswift.pianoHelpers.PianoView>
-</LinearLayout>
+    </LinearLayout>
+</RelativeLayout>
